[gd_scene load_steps=5 format=3 uid="uid://dljy8a1klbloc"]

[ext_resource type="Script" uid="uid://ds41cprh62216" path="res://scripts/grid_overlay.gd" id="1_cpr0p"]
[ext_resource type="PackedScene" uid="uid://be0ijmd1n541a" path="res://scenes/Overview3D.tscn" id="1_ibkli"]
[ext_resource type="Script" uid="uid://cf3lkqte5oqc1" path="res://scripts/building_manager.gd" id="2_78awf"]
[ext_resource type="Script" uid="uid://ddgoirhogq27o" path="res://scripts/camera_controller.gd" id="3_78awf"]

[node name="Game" type="Node2D"]

[node name="World2D" type="Node2D" parent="."]

[node name="GridOverlay" type="Node2D" parent="World2D"]
script = ExtResource("1_cpr0p")

[node name="Buildings" type="Node2D" parent="World2D"]

[node name="BuildingManager" type="Node2D" parent="World2D"]
script = ExtResource("2_78awf")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 288)
zoom = Vector2(5, 5)
script = ExtResource("3_78awf")
invert_trackpad_pan = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RootHBox" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftFill" type="Control" parent="UI/HUD/RootHBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="RightPanel" type="PanelContainer" parent="UI/HUD/RootHBox"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="UI/HUD/RootHBox/RightPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="UI/HUD/RootHBox/RightPanel/Margin"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UI/HUD/RootHBox/RightPanel/Margin/VBox"]
layout_mode = 2
text = "Overview"

[node name="OverviewContainer" type="SubViewportContainer" parent="UI/HUD/RootHBox/RightPanel/Margin/VBox"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="OverviewViewport" type="SubViewport" parent="UI/HUD/RootHBox/RightPanel/Margin/VBox/OverviewContainer"]
handle_input_locally = false
size = Vector2i(400, 400)
render_target_update_mode = 4

[node name="Overview3D" parent="UI/HUD/RootHBox/RightPanel/Margin/VBox/OverviewContainer/OverviewViewport" instance=ExtResource("1_ibkli")]
